RW-581 implemented master detail tab api call.

--- a/api/src/main/resources/cb_review_api.yaml
+++ b/api/src/main/resources/cb_review_api.yaml
@@ -241,33 +241,6 @@ paths:
           schema:
             $ref: "#/definitions/ParticipantDataListResponse"
 
-  /v1/workspaces/{workspaceNamespace}/{workspaceId}/review/{cohortId}/{cdrVersionId}/participants/{participantId}/master:
-    parameters:
-      - $ref: '#/parameters/workspaceNamespace'
-      - $ref: '#/parameters/workspaceId'
-      - $ref: '#/parameters/cohortId'
-      - $ref: '#/parameters/cdrVersionId'
-      - $ref: '#/parameters/participantId'
-    post:
-      tags:
-        - cohortReview
-      description:  >
-            Returns a collection of all domain data for the specified params for a participant. This endpoint
-            does pagination based on page, limit, order and column.
-      operationId: "getMasterParticipantData"
-      parameters:
-        - in: body
-          name: request
-          required: true
-          description: request body for getting list of participant data.
-          schema:
-            $ref: "#/definitions/PageFilterRequest"
-      responses:
-        200:
-          description: A collection of ParticipantConditions.
-          schema:
-            $ref: "#/definitions/MasterParticipantDataListResponse"
-
   /v1/workspaces/{workspaceNamespace}/{workspaceId}/review/{cohortId}/{cdrVersionId}/detail/{dataId}/{domain}:
     parameters:
       - $ref: '#/parameters/workspaceNamespace'
@@ -540,7 +513,7 @@ definitions:
             $ref: "#/definitions/ParticipantDrugsColumns"
             description: Column upon which to sort (default is 'itemDate')
 
-  ParticipantMaster:
+  ParticipantMasters:
     allOf:
       - $ref: '#/definitions/PageFilterRequest'
       - properties: # extra properties
@@ -570,15 +543,15 @@ definitions:
 
   ParticipantMasterColumns:
     type: string
-    enum: [itemDate, domain, standardVocabulary, standardName, sourceValue, sourceVocabulary, sourceName, age]
+    enum: [dataId, itemDate, domain, standardVocabulary, standardName, sourceValue, sourceVocabulary, sourceName]
 
   PageFilterType:
     type: string
-    enum: [ParticipantCohortStatuses, ParticipantConditions, ParticipantProcedures, ParticipantObservations, ParticipantDrugs]
+    enum: [ParticipantCohortStatuses, ParticipantConditions, ParticipantProcedures, ParticipantObservations, ParticipantDrugs, ParticipantMasters]
 
   DataType:
     type: string
-    enum: [ParticipantCondition, ParticipantProcedure, ParticipantObservation, ParticipantDrug]
+    enum: [ParticipantCondition, ParticipantProcedure, ParticipantObservation, ParticipantDrug, ParticipantMaster]
 
   SortOrder:
     type: string
@@ -657,51 +630,6 @@ definitions:
         type: "array"
         items:
           $ref: "#/definitions/CohortSummary"
-
-  MasterParticipantDataListResponse:
-    type: object
-    required:
-      - items
-    properties:
-      items:
-        type: "array"
-        items:
-          $ref: "#/definitions/MasterParticipantData"
-
-  MasterParticipantData:
-    type: object
-    required:
-      - dataId
-      - itemDate
-      - domain
-      - standardVocabulary
-      - standardName
-      - sourceValue
-      - sourceVocabulary
-      - sourceName
-    properties:
-      dataId:
-        type: integer
-        format: int64
-        description: Primary key of this data
-      itemDate:
-        type: string
-        description: The date of the condition occurrence
-      standardVocabulary:
-        type: string
-        description: The standard vocabulary of this condition
-      standardName:
-        type: string
-        description: The standard name of this condition
-      sourceValue:
-        type: string
-        description: The source value of this condition
-      sourceVocabulary:
-        type: string
-        description: The source vocabulary of this condition
-      sourceName:
-        type: string
-        description: The source name of this condition.
 
   ParticipantCohortAnnotation:
     type: object
@@ -846,7 +774,6 @@ definitions:
       - sourceValue
       - sourceVocabulary
       - sourceName
-      - age
       - dataType # required for inheritance to work
     properties:
       itemDate:
@@ -867,31 +794,55 @@ definitions:
       sourceName:
         type: string
         description: The source name of this condition.
-      age:
-        type: integer
-        description: The age of event for the participant.
       dataType:
         $ref: "#/definitions/DataType"
 
   ParticipantCondition:
     allOf:
       - $ref: '#/definitions/ParticipantData'
+      - properties: # extra properties
+          age:
+            type: integer
+            description: The age of event for the participant
 
   ParticipantProcedure:
     allOf:
       - $ref: '#/definitions/ParticipantData'
+      - properties: # extra properties
+          age:
+            type: integer
+            description: The age of event for the participant
 
   ParticipantObservation:
     allOf:
       - $ref: '#/definitions/ParticipantData'
+      - properties: # extra properties
+          age:
+            type: integer
+            description: The age of event for the participant
 
   ParticipantDrug:
     allOf:
       - $ref: '#/definitions/ParticipantData'
       - properties: # extra properties
+          age:
+            type: integer
+            description: The age of event for the participant
           signature:
             type: string
             description: signature of drug
+
+  ParticipantMaster:
+    allOf:
+      - $ref: '#/definitions/ParticipantData'
+      - properties: # extra properties
+          dataId:
+            type: integer
+            format: int64
+            description: Primary key of this data
+          domain:
+            type: string
+            description: the domain of this data.
 
   AnnotationType:
     type: string
