--- a/api/tools/build.gradle
+++ b/api/tools/build.gradle
@@ -124,8 +124,8 @@ dependencies {
   compile 'org.apache.commons:commons-lang3:3.0'
   compile 'com.google.code.gson:gson:+'
   compile 'org.hibernate:hibernate-validator:+'
-  compile 'com.squareup.okhttp:okhttp:2.6.0'
-  compile 'com.squareup.okhttp:logging-interceptor:2.6.0'
+  compile "com.squareup.okhttp:okhttp:${OKHTTP_VERSION}"
+  compile "com.squareup.okhttp:logging-interceptor:${OKHTTP_VERSION}"
 }
 
 
