Reduce serial API calls on localize via Leo data URIs

--- a/api/src/main/resources/notebooks.yaml
+++ b/api/src/main/resources/notebooks.yaml
@@ -383,99 +383,8 @@ paths:
   # In Swagger 2, path params are escaped so we need to hardcode any known "/"
   # delimiters. With Swagger 3, allowReserved would allow us to collapse the
   # "workspaces/..." fragment into a single "path" var, as is used in Jupyter's
-  # own Swagger definition. The next 3 methods are actually one in the same in
-  # Jupyter's API.
-  /notebooks/{googleProject}/{clusterName}/api/contents/workspaces:
-    parameters:
-      - in: path
-        name: googleProject
-        description: googleProject
-        required: true
-        type: string
-      - in: path
-        name: clusterName
-        description: clusterName
-        required: true
-        type: string
-    put:
-      summary: Save or upload file.
-      description: "Saves the file in the location specified by name and path.  PUT is very similar to POST, but the requester specifies the name, whereas with POST, the server picks the name."
-      tags:
-        - jupyter
-      operationId: putWorkspacesRootDir
-      parameters:
-        - name: model
-          in: body
-          description: New path for file or directory
-          schema:
-            $ref: '#/definitions/JupyterModel'
-      responses:
-        200:
-          description: File saved
-          headers:
-            Location:
-              description: Updated URL for the file or directory
-              type: string
-              format: url
-          schema:
-            $ref: '#/definitions/JupyterContents'
-        201:
-          description: Path created
-          headers:
-            Location:
-              description: URL for the file or directory
-              type: string
-              format: url
-          schema:
-            $ref: '#/definitions/JupyterContents'
-  /notebooks/{googleProject}/{clusterName}/api/contents/workspaces/{workspaceDir}:
-    parameters:
-      - in: path
-        name: googleProject
-        description: googleProject
-        required: true
-        type: string
-      - in: path
-        name: clusterName
-        description: clusterName
-        required: true
-        type: string
-      - in: path
-        name: workspaceDir
-        description: workspaceDir
-        required: true
-        type: string
-    put:
-      summary: Save or upload file.
-      description: "Saves the file in the location specified by name and path.  PUT is very similar to POST, but the requester specifies the name, whereas with POST, the server picks the name."
-      tags:
-        - jupyter
-      operationId: putWorkspaceDir
-      parameters:
-        - name: model
-          in: body
-          description: New path for file or directory
-          schema:
-            $ref: '#/definitions/JupyterModel'
-      responses:
-        200:
-          description: File saved
-          headers:
-            Location:
-              description: Updated URL for the file or directory
-              type: string
-              format: url
-          schema:
-            $ref: '#/definitions/JupyterContents'
-        201:
-          description: Path created
-          headers:
-            Location:
-              description: URL for the file or directory
-              type: string
-              format: url
-          schema:
-            $ref: '#/definitions/JupyterContents'
+  # own Swagger definition. Note: this does not initialize any parent
+  # directories. The Leo proxy localize API can be used for this purpose.
   /notebooks/{googleProject}/{clusterName}/api/contents/workspaces/{workspaceDir}/{fileName}:
     parameters:
       - in: path
