--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -23,3 +23,5 @@ spring.datasource.max-idle=5
 spring.datasource.min-idle=1
 
 spring.jpa.hibernate.ddl-auto=none
+
+logging.level.org.pmiops.workbench=INFO
