--- a/api/tools/build.gradle
+++ b/api/tools/build.gradle
@@ -100,6 +100,7 @@ sourceSets {
                   'org/pmiops/workbench/notebooks/NotebooksService.java',
                   'org/pmiops/workbench/notebooks/NotebooksServiceImpl.java',
                   'org/pmiops/workbench/notebooks/NotebooksConfig.java',
+                  'org/pmiops/workbench/notebooks/NotebooksRetryHandler.java',
                   'org/pmiops/workbench/db/dao/CohortService.java',
                   'org/pmiops/workbench/db/dao/ParticipantCohortStatusDaoCustom.java']
     }
